# PEDSA

./: .gitignore  1. 项目白皮书.md  2. 图谱构建提示词.md  3. 图谱修复提示词.md  Cargo.toml  README.md  pyproject.toml  优化版编译脚本.ps1
.cargo/: config.toml
.github/workflows/: ci.yml
models/bge-small-zh-v1.5-gguf/: LICENSE
models/gliner-x-base/: LICENSE  README.md  gliner_config.json  tokenizer_config.json
python/pedsa/: __init__.py
src/: benchmark_latency.rs  dataset.rs  embedding.rs  gliner_ner.rs  lib.rs  main.rs  python.rs  storage.rs  tests.rs
src/bench/: benchmark_latency.rs  benchmarks.rs  mod.rs
src/core/: engine.rs  mod.rs  ontology.rs  retrieval.rs  simhash.rs  stopwords.rs  types.rs
src/data/: data_loader.rs  dataset.rs  mod.rs  sqlite_store.rs  storage.rs  store.rs
src/ml/: embedding.rs  gliner_ner.rs  inference_engine.rs  mod.rs
