[package]
name = "PEDSA_Embedding"
version = "0.1.0"
edition = "2024"

[lib]
name = "pedsa_embedding"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["gliner"]
gliner = ["gline-rs", "orp"]
python = ["pyo3/extension-module"]
[dependencies]
aho-corasick = "1.1"
ahash = "0.8"
smallvec = "1.11"
rayon = "1.8"
instant = "0.1"
twox-hash = "1.6" # 高速 64-bit 哈希，用于 SimHash
memmap2 = "0.9"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
half = { version = "2", features = ["bytemuck", "rand_distr", "num-traits", "std"] }
candle-core = { version = "0.9.2", features = [] }
candle-nn = { version = "0.9.2", features = [] }
candle-transformers = { version = "0.9.2", features = [] }
tokenizers = { version = "0.21", features = ["onig"] }  # aligned with gline-rs
hf-hub = "0.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.18.4"
gline-rs = { version = "1", optional = true }  # GLiNER ONNX 推理引擎
orp = { version = "0.9.2", optional = true }    # ONNX Runtime Pipeline
jieba-rs = "0.7"           # 中文分词 (预分词提升 GLiNER span 精度)
rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite 存储后端
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

[[bin]]
name = "PEDSA_Embedding"
path = "src/main.rs"

